[package]
name = "linode_api"
version = "0.1.0"
edition = "2021"
description = "Rust API Client for linode_api"
license = "MIT"

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "*", features = ["vendored"] }

[lib]
crate-type = ["lib"]
name = "linode_api"

[dev-dependencies]
serial_test = "3.0.0"

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.97"
serde_urlencoded = "0.7.1"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
http = "1"
thiserror = "1.0.43"
bytes = { version = "1", features = ["serde"] }
tokio = { version = "1.35.0", features = ["rt-multi-thread", "macros"] }

clap = { version = "4.5.17", optional = true, features = ["derive"] }
clap_complete = { version = "4.5.29", optional = true }
clap-markdown = { version = "0.1.4", optional = true }
dotenv = { version = "0.15.0", optional = true }
shlex = { version = "1.3.0", optional = true }
camino = { version = "1.1.9", optional = true }
mime_guess = { version = "2.0.5", optional = true }
anstyle = { version = "1.0.8", optional = true }
log = { version = "0.4.20", optional = true }
env_logger = { version = "0.11.1", optional = true }

[[bin]]
name = "linode-api"
path = "src/cli.rs"
required-features = ["cli"]

[features]
cli = ["dep:clap","dep:clap_complete","dep:clap-markdown","dep:dotenv","dep:shlex","dep:camino","dep:mime_guess","dep:anstyle","dep:log","dep:env_logger"]